<resources>
    <string name="app_name">Manager</string>
    <string name="title_activity_stocks">StocksActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="temporary_categories">
        <item>Kitchen</item>
        <item>Bathroom</item>
        <item>Computer</item>
        <item>Gifts</item>
        <item>School</item>
    </string-array>

    <string-array name="button_states">
        <item>Order</item>
        <item>Quote</item>
    </string-array>

    <string name="title_activity_reports">ReportsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">Start Now</string>
    <string name="slide_1_title">SUPER EASY</string>
    <string name="slide_1_desc">Super simple to use and easy to understand.</string>
    <string name="slide_2_title">SUPPORT</string>
    <string name="slide_2_desc">Immediately convert your Android phone into an intuitive and easy to use retail POS Point of Sale</string>
    <string name="slide_3_title">SCALABLE</string>
    <string name="slide_3_desc">Use in small mom and pop stores and restaurants as well as corporate chains with many locations.</string>


    <string name="title_activity_address_book">AddressBookActivity</string>
    <string name="title_activity_quotes_orders">QuotesOrdersActivity</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="default_shop_name">Shop Name</string>
    <string name="title_auto_upload">Backup on wifi</string>
    <string name="summary_upload_over_wifi">Backup data when network is on wifi</string>
    <string name="title_backup_frequency">Backup Frequency</string>
    <string name="summary_backup_frequency">Specify after what duration do you want your valuable data backed up</string>
    <string name="pref_title_security">Security</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">Our business is to help your business succeed by providing you with the right tools to run it.</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.entrepreneur.com/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.entrepreneur.com/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.entrepreneur.com/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_shop_name">Shop Name</string>
    <string name="title_always_lock_report">Lock Reports</string>
    <string name="title_require_password">Lock Application</string>
    <string name="summary_require_password">Always require the password when opening this application</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_shop_name">key_shop_name</string>
    <string name="key_backup_frequency">key_backup_frequency</string>
    <string name="key_always_lock_reports">key_always_lock_reports</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_always_req_password">key_require_app_password</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="summary_app_password">Require password when opening reports</string>


</resources>
