<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
        <EditTextPreference
            android:defaultValue="@string/default_shop_name"
            android:key="@string/key_shop_name"
            android:summary="@string/default_shop_name"
            android:title="@string/title_shop_name" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_upload_over_wifi"
            android:summary="@string/summary_upload_over_wifi"
            android:title="@string/title_auto_upload" />

        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/title_backup_frequency"
            android:entries="@array/pref_backup_freq_entries"
            android:entryValues="@array/pref_backup_freq_values"
            android:key="@string/key_backup_frequency"
            android:summary="@string/summary_backup_frequency"
            android:title="@string/title_backup_frequency" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_security">

        <SwitchPreference
            android:defaultValue="true"
            android:summary="@string/summary_app_password"
            android:key="@string/key_always_lock_reports"
            android:title="@string/title_always_lock_report" />


        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_always_req_password"
            android:summary="@string/summary_require_password"
            android:title="@string/title_require_password" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>